<resources>
    <string name="app_name">Exercice1</string>
    <string name="name">Firstname</string>
    <string name="surname">Surname</string>
    <string name="birthday">Date of birth</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="sport" translatable="false">Sport</string>
    <string name="videogames">Video Games</string>
    <string name="reading">Reading</string>
    <string name="music">Music</string>
    <string name="submit">Submit</string>
    <string name="ret">Return</string>
    <string name="dl">Download</string>
</resources>